<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/service_restart"
        android:title="@string/title_service_restart"
        app:showAsAction="never" />
    <item
        android:id="@+id/sub_update"
        android:title="@string/title_sub_update"
        app:showAsAction="never" />
    <item
        android:id="@+id/ping_all"
        android:title="@string/title_ping_all_server"
        app:showAsAction="never" />
    <item
        android:id="@+id/real_ping_all"
        android:title="@string/title_real_ping_all_server"
        app:showAsAction="never" />
    <item
        android:id="@+id/sort_by_test_results"
        android:title="@string/title_sort_by_test_results"
        app:showAsAction="never" />
</menu>
